== master

* Add support for state-driven behavior
* Simplify initialize hooks, requiring super to be called instead
* Add :namespace option for generated state predicates / event methods

== 0.4.1 / 2008-12-16

* Fix nil states not being handled properly in guards, known states, or visualizations
* Fix the same node being used for different dynamic states in GraphViz output
* Always include initial state in the list of known states even if it's dynamic
* Use consistent naming scheme for dynamic states in GraphViz output
* Allow blocks to be directly passed into machine class
* Fix attribute predicates not working on attributes that represent columns in ActiveRecord

== 0.4.0 / 2008-12-14

* Remove the PluginAWeek namespace
* Add generic attribute predicate (e.g. "#{attribute}?(state_name)") and state predicates (e.g. "#{state}?")
* Add Sequel support
* Fix aliasing :initialize on ActiveRecord models causing warnings when the environment is reloaded
* Fix ActiveRecord state machines trying to query the database on unmigrated models
* Fix initial states not getting set when the current value is an empty string [Aaron Gibralter]
* Add rake tasks for generating graphviz files for state machines [Nate Murray]
* Fix initial state not being included in list of known states
* Add other_states directive for defining additional states not referenced in transitions or callbacks [Pete Forde]
* Add next_#{event}_transition for getting the next transition that would be performed if the event were invoked
* Add the ability to override the pluralized name of an attribute for creating scopes
* Add the ability to halt callback chains by: throw :halt
* Add support for dynamic to states in transitions (e.g. :to => lambda {Time.now})
* Add support for using real blocks in before_transition/after_transition calls instead of using the :do option
* Add DataMapper support
* Include states referenced in transition callbacks in the list of a machine's known states